Models diplaying bug when adding cylindree/annee - fixed

--- a/src/app/PageAdmin/data-base-managment/data-base-managment.component.css
+++ b/src/app/PageAdmin/data-base-managment/data-base-managment.component.css
@@ -1,3 +1,18 @@
-.btn {
-    white-space: normal;
+.mainBtn {
+    outline-style: none;
+    text-transform: uppercase; 
+}
+
+.row {
+    position: relative;
+}
+
+.submitBtnContainer {
+    position: absolute;
+    bottom: 0;
+    right: 25vw;
+}
+
+.container {
+    height: 70vh;
 }
