Added cylindree and 'cc' on the vhl card in tab-creation

--- a/src/app/Seller/page-announce-pro/tab-creation/tab-creation.component.html
+++ b/src/app/Seller/page-announce-pro/tab-creation/tab-creation.component.html
@@ -80,7 +80,7 @@
         <div class="card">
           <div class="card-header text-center titleMoto">
             <p *ngIf="!brand" class="card-text">Votre moto</p>
-            <p *ngIf="brand" class="card-text">{{brand}} {{model}} {{cylinder}} {{year}}</p>
+            <p *ngIf="brand" class="card-text">{{brand}} {{model}} {{cylinder}}cc {{year}}</p>
           </div>
         </div>
       </div>
