--- a/src/app/PageAdmin/admin-announce-details/admin-announce-details.component.html
+++ b/src/app/PageAdmin/admin-announce-details/admin-announce-details.component.html
@@ -4,29 +4,29 @@
   <div class="text-center announcePiecePage">
     <div class="row">
       <div class="col-lg-12 col-md-12 text-center announceTitle">
-        {{announce.pieceName}} {{announce.brand}} {{announce.model}} {{announce.cylinder}}
+        {{pieceName}} {{brand}} {{model}} {{cylinder}}
         <hr />
       </div>
 
       <div class="row">
         <div class="col-lg-4 col-xs-12 announceImageDiv">
-          <img class="announceImage col-sm-12" src="{{announce.image}}" placeholder="image">
+          <img class="announceImage col-sm-12" src="{{image}}" placeholder="image">
         </div>
 
         <div class="col-lg-4 col-xs-12 announceDescription">
 
           <p class="announce font-weight-bold">
             <br>
-            Marque: {{announce.brand}}
+            Marque: {{brand}}
             <br>
-            Modèle: {{announce.model}}
+            Modèle: {{model}}
             <br>
-            Cylindrée: {{announce.cylinder}}
+            Cylindrée: {{cylinder}}
             <br>
-            Année: {{announce.year}}
+            Année: {{year}}
           </p>
 
-          <p> Description: {{announce.description}}</p>
+          <p> Description: {{description}}</p>
 
           <p class="announceState">
             Etat de la pièce:
@@ -38,7 +38,7 @@
           </p>
         </div>
         <div class="shop col-lg-4 col-xs-12">
-          <p class="announcePrice">{{announce.price}}€</p>
+          <p class="announcePrice">{{price}}€</p>
         </div>
       </div>
 
