--- a/src/app/Buyer/announce-piece/announce-piece.component.html
+++ b/src/app/Buyer/announce-piece/announce-piece.component.html
@@ -4,29 +4,29 @@
   <div class="text-center announcePiecePage">
     <div class="row">
       <div class="col-lg-12 col-md-12 text-center announceTitle">
-        {{annonce.pieceName}} {{annonce.brand}} {{annonce.model}} {{annonce.cylinder}}
+        {{pieceName}} {{brand}} {{model}} {{cylinder}}
         <hr />
       </div>
 
       <div class="row">
         <div class="col-lg-4 col-xs-12 announceImageDiv">
-          <img class="announceImage col-sm-12" src="{{annonce.image}}" placeholder="image">
+          <img class="announceImage col-sm-12" src="{{image}}" placeholder="image">
         </div>
 
         <div class="col-lg-4 col-xs-12 announceDescription">
 
           <p class="announceDesc font-weight-bold">
             <br>
-            Marque: {{annonce.brand}}
+            Marque: {{brand}}
             <br>
-            Modèle: {{annonce.model}}
+            Modèle: {{model}}
             <br>
-            Cylindrée: {{annonce.cylinder}}
+            Cylindrée: {{cylinder}}
             <br>
-            Année: {{annonce.year}}
+            Année: {{year}}
           </p>
 
-          <p> Description: {{annonce.description}}</p>
+          <p> Description: {{description}}</p>
 
           <p class="announceState">
             Etat de la pièce:
@@ -38,7 +38,7 @@
           </p>
         </div>
         <div class="shop col-lg-4 col-xs-12">
-          <p class="announcePrice">{{annonce.price}}€</p>
+          <p class="announcePrice">{{price}}€</p>
           <label *ngIf="role =='ROLE_BUYER' || role ==undefined" type="button" class="btn panier btn-warning" (click)="ajoutPanier()">
             <img class="shopping" src="../../../assets/shopping.png">
             Ajouter au panier
