--- a/src/app/Buyer/buyer-home/search-immat/search-immat.component.css
+++ b/src/app/Buyer/buyer-home/search-immat/search-immat.component.css
@@ -4,7 +4,7 @@
     font-weight: 900;
 }
 .card-header{
-    background-color: #2a2a2a;
+    background-color: #212123;
     color: white;
     font-size: 0.8sem;
 }
