footer added in necessary compoenent

--- a/src/app/PageAdmin/admin-home/admin-home.component.html
+++ b/src/app/PageAdmin/admin-home/admin-home.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<div class="container-fluid">
+<div class="container-fluid adminContainer">
   <div class="row">
     <div class="col-md-3 navContainer">
       <button mat-raised-button class="sideNavBtn" routerLink="./admin-buyer-list">
