--- a/src/app/Buyer/panier/panier.component.html
+++ b/src/app/Buyer/panier/panier.component.html
@@ -83,6 +83,8 @@
   </div>
 </div>
 
+<app-footer></app-footer>
+
 <!-- Modal-->
         
         <div class="modal fade position" id="modal-container-703978" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
