--- a/src/app/PageAdmin/admin-home/admin-home.component.css
+++ b/src/app/PageAdmin/admin-home/admin-home.component.css
@@ -5,7 +5,6 @@
     color: white;
 }
 
-
 /*DEFAULT CSS - MOBILE VERSION  DEFAULT CSS - MOBILE VERSION  DEFAULT CSS - MOBILE VERSION  DEFAULT CSS - MOBILE VERSION*/
 @media (max-width: 576px) {
     .sideNavBtn {
@@ -49,5 +48,9 @@
 
     .navContainer {
         margin-top: 3vh; 
+    }
+
+    .adminContainer {
+        margin-top: 10vh;
     }
 }
