Css of the details icon in panier components fixed

--- a/src/app/Buyer/panier/panier.component.css
+++ b/src/app/Buyer/panier/panier.component.css
@@ -26,6 +26,14 @@ font-weight:bold;
     width: 50%;
 }
 
+.icons {
+    color: black;
+}
+
+.icons:active {
+    outline-style: none;
+}
+
 @media screen and (max-width: 600px)
 
 {
