--- a/src/app/Buyer/panier/panier.component.html
+++ b/src/app/Buyer/panier/panier.component.html
@@ -53,7 +53,7 @@
 
     <ng-container matColumnDef="select2">
       <th mat-header-cell *matHeaderCellDef></th>
-      <td mat-cell *matCellDef=" let element; let i = index"><a (click)="edit(i)" id="modal-703978" href="#modal-container-703978" role="button" class="btn" data-toggle="modal"><i class="material-icons icons">edit</i></a></td>
+      <td mat-cell *matCellDef=" let element; let i = index"><a (click)="edit(i)" id="modal-703978" data-target="#modal-container-703978" role="button" class="btn detailBtn" data-toggle="modal"><i class="material-icons icons">remove_red_eye</i></a></td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
